--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,5 +1,3 @@
-# Settings for Backend (on Cloud Run).
-# See https://firebase.google.com/docs/app-hosting/configure#cloud-run
 runConfig:
   minInstances: 0
   maxInstances: 50
@@ -7,21 +5,15 @@ runConfig:
   cpu: 1
   memoryMiB: 512
 
-# Environment variables and secrets.
-# env:
-  # Configure environment variables.
-  # See https://firebase.google.com/docs/app-hosting/configure#user-defined-environment
-  # - variable: MESSAGE
-  #   value: Hello world!
-  #   availability:
-  #     - BUILD
-  #     - RUNTIME
-
-  # Grant access to secrets in Cloud Secret Manager.
-  # See https://firebase.google.com/docs/app-hosting/configure#secret-parameters
-  # - variable: MY_SECRET
-  #   secret: mySecretRef
-
 build:
   command: npm run build
   outputDirectory: .next
+  publish: public
+
+functions:
+  directory: functions
+
+redirects:
+  - from: /*
+    to: /index.html
+    status: 200
