--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack -p 9003",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "next build",
+    "build": "npm run build",
+    "deploy": "netlify deploy",
+    "serve": "netlify dev",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
