--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compileOnSave": true,
   "include": [
-    "src"
+    "./**/*"
+  ],
+  "exclude": [
+    "lib"
   ],
   "compilerOptions": {
-    "module": "NodeNext",
+    "module": "CommonJS",
     "noImplicitReturns": true,
     "outDir": "lib",
     "sourceMap": true,
@@ -12,7 +15,7 @@
     "target": "es2017",
     "skipLibCheck": true,
     "esModuleInterop": true,
-    "moduleResolution": "nodenext",
+    "moduleResolution": "node",
     "noUnusedLocals": true
   }
 }
