--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@netlify/next-runtime": "^5.0.0-alpha.25",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
